data/all_generated_tests/raw_wast_tests/call_indirect_ImproperFunctionCallorReturnHandling_4491.wast
;; 10. **Test Description**: Provide a faulty `call_indirect` call where the last operand is unexpectedly an `i64` but a `i32` index is required, verifying the operand type stack check and trap.    - **Constraint Checked**: Operand stack type checking.    - **Relation to Improper Handling**: Ensures stack operations handle operand types correctly, preventing improper function calls.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) 0)
    (func (type 0) (i32.const 42))
    (func (call_indirect (type 0) (i64.const 0)))
  )
  "type mismatch: operand stack type"